<resources>
    <string name="app_name">Notally</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="done">Done</string>
    <string name="back">back</string>
    <string name="title">Title</string>
    <string name="search_notes">Search notes</string>
    <string name="notes">Notally</string>
    <string name="add_new_note">add new note</string>
    <string name="tip_tap_icon_to_add_new_note">Tip: Tap \'+\' icon to add new Note</string>
    <string name="do_you_really_want_to_n_delete_note">Do you really want to \n delete note?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="description_goes_here">Description goes here</string>
    <string name="edit">edit</string>
    <string name="save">Save</string>

    <string name="created_at">Created At : %1$s</string>
    <string name="updated_at">Updated At : %1$s</string>
    <string name="letter_count">letter count : %1$d</string>

    <string name="send_note_template"><b>%1$s</b> \n \n %2$s</string>
</resources>