<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.EditNoteFragment"
    android:background="@color/background_color"
    android:paddingTop="25dp"
    android:paddingHorizontal="25dp"
    android:layout_height="match_parent"
    android:layout_width="match_parent">


    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/icon_background"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back" />

    <ImageButton
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/icon_background"
        android:src="@drawable/ic_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_back"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        android:contentDescription="@string/back" />

    <ImageButton
        android:id="@+id/btn_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/icon_background"
        android:src="@drawable/ic_edit_outline"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@id/btn_delete"
        app:layout_constraintTop_toTopOf="@id/btn_back"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        android:contentDescription="@string/edit" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/icon_background"
        android:src="@drawable/ic_delete"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/save"
        style="@style/bottomSheetButton"
        app:cornerRadius="8dp"
        android:textSize="16sp"
        android:textAllCaps="false"
        app:layout_constraintTop_toTopOf="@id/btn_back"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        android:contentDescription="@string/back" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Title"
        android:textColor="@color/color_text"
        app:layout_constraintTop_toBottomOf="@id/btn_back"
        android:textColorHint="#A9A9A9"
        android:fontFamily="@font/nunito_bold"
        android:textSize="25sp"
        android:layout_marginTop="12dp"
        android:background="@null">
        <requestFocus/>
    </androidx.appcompat.widget.AppCompatEditText>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/et_title"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_text"
            android:hint="@string/description_goes_here"
            android:textColorHint="#a9a9a9"
            android:background="@null"
            android:fontFamily="@font/nunito_regular"/>
    </ScrollView>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_title"/>
</androidx.constraintlayout.widget.ConstraintLayout>