<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@color/icon_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/icon_background">

        <View
            android:id="@+id/line_view"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginBottom="8dp"
            android:background="@color/color_1"
            android:layout_marginHorizontal="70dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/line_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/nunito_bold"
            android:layout_marginVertical="8dp"
            android:textSize="20sp"
            android:textColor="@color/color_text"
            android:textAlignment="center"
            android:text="@string/do_you_really_want_to_n_delete_note"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            app:strokeWidth="2dp"
            android:fontFamily="@font/nunito_bold"
            android:textColor="@color/color_text"
            app:strokeColor="@color/color_1"
            android:backgroundTint="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@id/header"
            android:layout_marginVertical="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no"
            app:strokeWidth="2dp"
            app:strokeColor="@color/color_2"
            android:textColor="@color/color_text"
            android:fontFamily="@font/nunito_bold"
            android:layout_marginVertical="8dp"
            android:backgroundTint="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@id/yes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>